--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             Download
           </button>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 image-container" >
           <img src="images/iphone6.png" alt="iphone-mockup" id="title-image">
         </div>
 
@@ -85,19 +85,19 @@
       <div class="row">
 
         <div class="col-lg-4 feature-box ">
-          <i class="fa-solid fa-circle-check fa-4x"></i>
+          <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
           <h3 class="features-title">Easy to use.</h3>
           <p class="features-subtitle">So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="col-lg-4 feature-box ">
-          <i class="fa-solid fa-bullseye fa-4x"></i>
+          <i class="fa-solid fa-bullseye fa-4x feature-icon"></i>
           <h3 class="features-title">Elite Clientele</h3>
           <p class="features-subtitle">We have all the dogs, the greatest dogs.</p>
         </div>
 
         <div class="col-lg-4 feature-box">
-          <i class="fa-solid fa-heart fa-4x"></i>
+          <i class="fa-solid fa-heart fa-4x feature-icon"></i>
           <h3 class="features-title">Guaranteed to work.</h3>
           <p class="features-subtitle">Find the love of your dog's life or your money back.</p>
         </div>
@@ -153,30 +153,53 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+    <div class="row pricing-table">
+      <div class="col-lg-4 col-md-6">
+        <div class="card rounded-5">
+          <div class="card-header rounded-top-5 bg-transparent">
+            <h3 >Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-outline-dark w-100" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="col-lg-4 col-md-6">
+        <div class="card rounded-5">
+          <div class="card-header rounded-top-5 bg-transparent">
+            <h3 >Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-dark w-100" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="col-lg-4">
+        <div class="card rounded-5">
+          <div class="card-header rounded-top-5">
+            <h3 class="text-light">Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-dark w-100" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </section>
 
@@ -185,9 +208,15 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading text-light">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-dark btn-lg download-button"> 
+        <i class="fa-brands fa-apple"></i>
+        Download
+      </button>
+      <button type="button" class="btn btn-outline-light btn-lg download-button">
+        <i class="fa-brands fa-google-play"></i>
+        Download
+      </button>
 
   </section>
 
@@ -195,8 +224,11 @@
   <!-- Footer -->
 
   <footer id="footer">
-
-    <p>© Copyright TinDog</p>
+    <a href="#" class="footer-social-icons" type="button"><i class="fa-brands fa-x-twitter"><span class="visually-hidden">Twitter</span></i></a>
+    <a href="#" class="footer-social-icons" type="button"><i class="fa-brands fa-facebook-f"><span class="visually-hidden">Facebook</span></i></a>
+    <a href="#" class="footer-social-icons" type="button"><i class="fa-brands fa-instagram"><span class="visually-hidden">Instagram</span></i></a>
+    <a href="#" class="footer-social-icons" type="button"><i class="fa-solid fa-envelope"><span class="visually-hidden">Email</span></i></a>
+    <p class="footer-title">© Copyright 2023 TinDog</p>
 
   </footer>
 
