--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   
-  <section id="title">
+  <section class="colored-section" id="title">
 
     <div class="container-fluid">
         <!-- Nav Bar -->
@@ -37,16 +37,16 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item ">
-              <a href="#" class="nav-link ">Home</a>
+              <a href="#title" class="nav-link ">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Contact</a>
+              <a href="#pricing" class="nav-link">Pricing</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Pricing</a>
+              <a href="#cta" class="nav-link">Downloads</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Downloads</a>
+              <a href="#footer" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -59,7 +59,7 @@
          <div class="row">
           
         <div class="col-lg-6">
-          <h1 id="headline" >Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-headline" >Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"> 
             <i class="fa-brands fa-apple"></i>
             Download
@@ -79,8 +79,8 @@
 
   <!-- Features -->
 
-  <section id="features">
-    <div >
+  <section class="white-section" id="features">
+    <div class="container-fluid">
 
       <div class="row">
 
@@ -108,16 +108,16 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-ride="false" >
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h2>
           <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
@@ -137,7 +137,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-image" src="images/tnw.png" alt="tnw-logo">
     <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -148,54 +148,57 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <div class="container-fluid">
 
-    <div class="row pricing-table">
-      <div class="col-lg-4 col-md-6">
-        <div class="card rounded-5">
-          <div class="card-header rounded-top-5 bg-transparent">
-            <h3 >Chihuahua</h3>
-          </div>
-          <div class="card-body">
-            <h2>Free</h2>
-            <p>5 Matches Per Day</p>
-            <p>10 Messages Per Day</p>
-            <p>Unlimited App Usage</p>
-            <button class="btn btn-lg btn-outline-dark w-100" type="button">Sign Up</button>
+      <h2>A Plan for Every Dog's Needs</h2>
+      <p>Simple and affordable price plans for your and your dog.</p>
+
+      <div class="row pricing-table">
+        <div class="col-lg-4 col-md-6">
+          <div class="card rounded-5">
+            <div class="card-header rounded-top-5 bg-transparent">
+              <h3 >Chihuahua</h3>
+            </div>
+            <div class="card-body">
+              <h2>Free</h2>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-lg btn-outline-dark w-100" type="button">Sign Up</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-lg-4 col-md-6">
-        <div class="card rounded-5">
-          <div class="card-header rounded-top-5 bg-transparent">
-            <h3 >Labrador</h3>
-          </div>
-          <div class="card-body">
-            <h2>$49 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button class="btn btn-lg btn-dark w-100" type="button">Sign Up</button>
+        <div class="col-lg-4 col-md-6">
+          <div class="card rounded-5">
+            <div class="card-header rounded-top-5 bg-transparent">
+              <h3 >Labrador</h3>
+            </div>
+            <div class="card-body">
+              <h2>$49 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-lg btn-dark w-100" type="button">Sign Up</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-lg-4">
-        <div class="card rounded-5">
-          <div class="card-header rounded-top-5">
-            <h3 class="text-light">Mastiff</h3>
-          </div>
-          <div class="card-body">
-            <h2>$99 / mo</h2>
-            <p>Pirority Listing</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button class="btn btn-lg btn-dark w-100" type="button">Sign Up</button>
+        <div class="col-lg-4">
+          <div class="card rounded-5">
+            <div class="card-header rounded-top-5">
+              <h3 class="text-light">Mastiff</h3>
+            </div>
+            <div class="card-body">
+              <h2>$99 / mo</h2>
+              <p>Pirority Listing</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-lg btn-dark w-100" type="button">Sign Up</button>
+            </div>
           </div>
         </div>
       </div>
@@ -206,14 +209,14 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
-    <h3 class="cta-heading text-light">Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="big-headline">Find the True Love of Your Dog's Life Today.</h3>
       <button type="button" class="btn btn-dark btn-lg download-button"> 
         <i class="fa-brands fa-apple"></i>
         Download
       </button>
-      <button type="button" class="btn btn-outline-light btn-lg download-button">
+      <button type="button" class="btn btn-light btn-lg download-button">
         <i class="fa-brands fa-google-play"></i>
         Download
       </button>
@@ -223,7 +226,7 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <a href="#" class="footer-social-icons" type="button"><i class="fa-brands fa-x-twitter"><span class="visually-hidden">Twitter</span></i></a>
     <a href="#" class="footer-social-icons" type="button"><i class="fa-brands fa-facebook-f"><span class="visually-hidden">Facebook</span></i></a>
     <a href="#" class="footer-social-icons" type="button"><i class="fa-brands fa-instagram"><span class="visually-hidden">Instagram</span></i></a>
